Fix css overflow in list cell

--- a/bin/cdb.less
+++ b/bin/cdb.less
@@ -251,7 +251,7 @@
 			white-space: nowrap;
 			cursor : pointer;
 			text-overflow: ellipsis;
-			max-width: 900;
+			max-width: 900px;
 			overflow: hidden!important;
 			img {
 				max-height: 32px;
